--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^0.2.7",
+    "@vuelidate/core": "^2.0.0-alpha.34",
+    "@vuelidate/validators": "^2.0.0-alpha.26",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "element-plus": "^1.2.0-beta.6",
     "express": "^4.17.2",
     "http-proxy-middleware": "^2.0.1",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
-    "vuelidate": "^0.7.7"
+    "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
