--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "element-plus": "^1.2.0-beta.6",
     "express": "^4.17.2",
     "http-proxy-middleware": "^2.0.1",
+    "jdenticon": "^3.1.1",
     "uuid": "^8.3.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
